--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "meu-app",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://lincolnmelo.github.io/pokemon-app",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.1",
     "apollo-boost": "^0.4.4",
     "client-oauth2": "^4.2.5",
+    "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
