--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "meu-app",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://lincolnmelo.github.io/pokemon-app",
+  "homepage": "http://lincolnmelo.github.io/pokemon-app",
   "dependencies": {
+    "@apollo/react-components": "3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.1",
-    "apollo-boost": "^0.4.4",
+    "@material-ui/icons": "^4.5.1",
+    "@types/react": "16.9.17",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache": "1.3.4",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
+    "apollo-link": "1.2.13",
+    "apollo-utilities": "1.3.3",
     "client-oauth2": "^4.2.5",
     "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
