--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "classnames": "2.2.6",
     "@types/react": "16.9.17",
     "apollo-boost": "^0.4.7",
     "apollo-cache": "1.3.4",
