--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
-    "classnames": "2.2.6",
+    "@mdi/js": "^4.8.95",
+    "@mdi/react": "^1.2.1",
     "@types/react": "16.9.17",
     "apollo-boost": "^0.4.7",
     "apollo-cache": "1.3.4",
@@ -16,6 +17,7 @@
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
     "apollo-utilities": "1.3.3",
+    "classnames": "2.2.6",
     "client-oauth2": "^4.2.5",
     "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
