--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/js": "^4.8.95",
     "@mdi/react": "^1.2.1",
     "@types/react": "16.9.17",
+    "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.7",
     "apollo-cache": "1.3.4",
     "apollo-cache-inmemory": "1.6.5",
